--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                             <div class="slide-text">
                                 <img src="images/wc_text.png" alt="01.정수기">
                                 <p>당신을 위한 더 새로운 물! <br>더 건강한 물로 일상의 활력을 선사합니다.</p>
-                                <a href="/waterCare.html">자세히 보기 <i class="fa-solid fa-angles-right"></i></a>
+                                <a href="waterCare.html">자세히 보기 <i class="fa-solid fa-angles-right"></i></a>
                             </div>
                         </div>
                         </div>
@@ -35,7 +35,7 @@
                             <div class="slide-text">
                                 <img src="images/ac_text.png" alt="02.공기청정기">
                                 <p>당신을 위한 최상의 릴렉스! <br>편안한 쾌적함의 공기를 선사해드립니다.</p>
-                                <a href="waterCare.html">자세히 보기 <i class="fa-solid fa-angles-right"></i></a>
+                                <a href="airCare.html">자세히 보기 <i class="fa-solid fa-angles-right"></i></a>
                             </div>
                         </div>
                         </div>
@@ -45,7 +45,7 @@
                             <div class="slide-text">
                                 <img src="images/bc_text.png" alt="03.비데">
                                 <p>당신을 위한 건강한 습관! <br>몸에 닿는 깨끗한 물로 쾌적한 컨디션을 만듭니다.</p>
-                                <a href="waterCare.html">자세히 보기 <i class="fa-solid fa-angles-right"></i></a>
+                                <a href="bodyCare.html">자세히 보기 <i class="fa-solid fa-angles-right"></i></a>
                             </div>
                         </div>
                         </div>
@@ -55,7 +55,7 @@
                             <div class="slide-text">
                                 <img src="images/sc_text.png" alt="04.매트리스">
                                 <p>당신을 위한 최고의 수면! <br>개인에 꼭 맞춘 최적의 수면 환경을 제공합니다.</p>
-                                <a href="waterCare.html">자세히 보기 <i class="fa-solid fa-angles-right"></i></a>
+                                <a href="sleepCare.html">자세히 보기 <i class="fa-solid fa-angles-right"></i></a>
                             </div>
                         </div>
                         </div>
