--- a/detail.html
+++ b/detail.html
@@ -6,16 +6,17 @@
     <title>상품 상세정보</title>
     <link rel="stylesheet" href="css/detail.css" type="text/css">
     <script src="https://kit.fontawesome.com/63b8cec292.js" crossorigin="anonymous"></script>
+    <script src="js/include.js"></script>
     <script src="js/common.js"></script>
     <script src="js/detail.js"></script>
 </head>
 <body>
-    <header id="header"></header>
+    <header data-include-path="header.html"></header>
     <main id="main">
         <section class="detail-view">
             <div class="wrapper"></div>
         </section>
     </main>
-    <footer id="footer"></footer>
+    <footer data-include-path="footer.html"></footer>
 </body>
 </html>
