--- a/airCare.html
+++ b/airCare.html
@@ -8,11 +8,12 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css">
     <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
     <script src="https://kit.fontawesome.com/63b8cec292.js" crossorigin="anonymous"></script>
+    <script src="js/include.js"></script>
     <script src="js/common.js"></script>
     <script src="js/script.js" defer></script>
 </head>
 <body class="air-page">
-    <header id="header"></header>
+    <header data-include-path="header.html"></header>
     <main id="main">
         <section class="banner air">
             <div class="swiper subSwiper">
@@ -51,9 +52,20 @@
             </div>
         </section>
     </main>
-    <footer id="footer"></footer>
+    <footer data-include-path="footer.html"></footer>
     <script>
-        
+        var swiper = new Swiper(".subSwiper", {
+            // effect: 'fade',
+            pagination: {
+                el: '.swiper-pagination',
+                clickable : true,
+            },
+            loop: true,
+            autoplay: {
+                delay: 5000,
+                disableOnInteraction: false,
+            }
+        });
     </script>
 </body>
 </html>
