update script.js location

--- a/airCare.html
+++ b/airCare.html
@@ -10,7 +10,6 @@
     <script src="https://kit.fontawesome.com/63b8cec292.js" crossorigin="anonymous"></script>
     <script src="js/include.js"></script>
     <script src="js/common.js"></script>
-    <script src="js/script.js" defer></script>
 </head>
 <body class="air-page">
     <header data-include-path="header.html"></header>
@@ -67,5 +66,6 @@
             }
         });
     </script>
+    <script src="js/script.js"></script>
 </body>
 </html>
