--- a/detail.html
+++ b/detail.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>상품 상세정보</title>
+    <link rel="icon" href="/images/b2019_favicon.png">
     <link rel="stylesheet" href="css/detail.css" type="text/css">
     <script src="https://kit.fontawesome.com/63b8cec292.js" crossorigin="anonymous"></script>
     <script src="js/include.js"></script>
