--- a/sleepCare.html
+++ b/sleepCare.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>매트리스</title>
-    <link rel="icon" href="/images/b2019_favicon.png">
+    <link rel="icon" href="images/b2019_favicon.png">
     <link rel="stylesheet" href="css/sub.css" type="text/css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css">
     <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
