--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css">
     <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
     <script src="https://kit.fontawesome.com/63b8cec292.js" crossorigin="anonymous"></script>
-    <script defar src="js/include.js"></script>
-    <script defar src="js/common.js"></script>
+    <script src="js/include.js"></script>
+    <script src="js/common.js"></script>
 </head>
 <body class="index-page">
     <header data-include-path="header.html"></header>
