--- a/airCare.html
+++ b/airCare.html
@@ -40,7 +40,7 @@
                 <div class="swiper-pagination"></div>
             </div>
         </section>
-        <section class="product-wrap">
+        <div class="product-wrap">
             <div class="wrapper">
                 <div class="category-item">
                     <button id="tab1" class="on">전체</button>
@@ -50,7 +50,7 @@
                 </div>
                 <div class="product-list"></div>
             </div>
-        </section>
+        </div>
     </main>
     <footer data-include-path="footer.html"></footer>
     <script>
