--- a/detail.html
+++ b/detail.html
@@ -13,9 +13,9 @@
 <body>
     <header data-include-path="header.html"></header>
     <main id="main">
-        <section class="detail-view">
+        <div class="detail-view">
             <div class="wrapper"></div>
-        </section>
+        </div>
     </main>
     <footer data-include-path="footer.html"></footer>
     <script src="js/detail.js"></script>
