--- a/index.html
+++ b/index.html
@@ -61,7 +61,8 @@
                         </div>
                         </div>
                     </div>
-                <div class="swiper-pagination"></div>
+                    <div class="swiper-pagination"></div>
+                </div>
             </div>
         </section>
         <section class="best-product">
