--- a/bodyCare.html
+++ b/bodyCare.html
@@ -2,7 +2,7 @@
 <html lang="ko">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
     <title>비데/연수기</title>
     <link rel="icon" href="images/b2019_favicon.png">
     <link rel="stylesheet" href="css/sub.css" type="text/css">
